<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llPaymentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvPaymentTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/paid"
                    android:textColor="@color/colorMainText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvPaymentSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/success_payment"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivPaymentStatus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_success" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#e4e4e4" />

        <LinearLayout
            android:id="@+id/llPaymentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPaymentNumberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_number"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPaymentNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="748538271"
                android:textColor="@color/colorMainText"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_be_paid"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPaymentAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="12,000"
                android:textColor="@color/colorMainText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAbbr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="right"
                android:text="@string/abbr"
                android:textColor="@color/colorMainText"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/next_button_rounded">

            <TextView
                android:id="@+id/tvClose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>