<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="300dp"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llPaymentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/confirm_with_sms"
                android:textColor="@color/colorMainText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sms_code_sent"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#e4e4e4" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/llContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvMobileNumberOwner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/owner_mobile_number"
                        android:textColor="@color/colorMainText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorMainText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etCode"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:hint="@string/sms_code"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="5"
                        android:textColor="@color/colorMainText"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textColor="@color/colorError"
                        android:textSize="14sp"
                        android:visibility="gone" />


                    <LinearLayout
                        android:id="@+id/btnNext"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/next_button_rounded">

                        <TextView
                            android:id="@+id/tvNext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/next"
                            android:textColor="#fff"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/pbLoading"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:theme="@style/cl_ProgressBar"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>