<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="300dp"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/llPaymentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/waiting_confirmation"
                android:textColor="?attr/colorMainText"
                android:textSize="18sp" />


            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/progressIndicator"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:indicatorColor="?attr/colorButtonDisabled"
                app:indicatorName="BallPulseIndicator" />

        </LinearLayout>


        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invoice_placed"
            android:textColor="?attr/colorSecondaryText"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#27000000" />


        <TextView
            android:id="@+id/tvConfirmMethods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ways_to_confirm"
            android:textColor="?attr/colorMainText"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/llUSSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_880" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUssd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="USSD *880#"
                    android:textColor="?attr/colorMainText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvUssdInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/call_ussd"
                    android:textColor="?attr/colorSecondaryText"
                    android:textSize="14sp" />
            </LinearLayout>


            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_next"
                android:tint="?attr/colorNextIcon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTelegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_telegram" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Telegram CLICK"
                    android:textColor="?attr/colorMainText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvBotInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/click_bot_sent_code"
                    android:textColor="?attr/colorSecondaryText"
                    android:textSize="14sp" />
            </LinearLayout>


            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_next"
                android:tint="?attr/colorNextIcon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_app" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvClickApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_app"
                    android:textColor="?attr/colorMainText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvClickAppInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/enter_invoices_list"
                    android:textColor="?attr/colorSecondaryText"
                    android:textSize="14sp" />
            </LinearLayout>


            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_next"
                android:tint="?attr/colorNextIcon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>